# Triton-distributed

./: .gitignore  .gitmodules  CMakeLists.txt  README-cn.md  README.md  build_scm.sh
.codebase/scripts/: cache_hf_configs.py
.codebase/scripts/little_kernel/: run_units.sh
.github/workflows/: amd-ci.yml  ci.yml  metax-ci.yml
FlashComm/: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
FlashComm/csrc/: bindings.cpp
FlashComm/csrc/buffer/: pybind.cpp  shareable_block.cpp  symmetric_memory.cpp
FlashComm/csrc/ep/: intranode.cpp
FlashComm/csrc/ep/kernels/: intranode_cuda.cu
FlashComm/include/flash_comm/: common.h  copy.cuh  launch_utils.cuh  torch_utils.h  utils.cuh
FlashComm/include/flash_comm/buffer/: shareable_block.h  symmetric_memory.h
FlashComm/include/flash_comm/ep/: intranode.h
FlashComm/python/flash_comm/: __init__.py
FlashComm/python/flash_comm/buffer/: __init__.py  symmetric.py
FlashComm/script/: build_scm.sh  code-format.sh
FlashComm/tests/buffer/: test_symmetric.py
FlashComm/tests/cutedsl_cache/: test_cutedsl_cache.py
FlashComm/tests/ep/: test_dispatch_layout_intranode.py  test_ep_intranode.py  test_token_within_expert_offset_intranode.py
FlashComm/tests/ep_overlap/: _torch_refs.py  test_ep_overlap_dispatch_group_gemm.py  test_ep_overlap_group_gemm_combine.py  test_ep_overlap_topk_reduce.py
backends/amd/backend/: compiler.py
csrc/lib/: CMakeLists.txt
docs/: build.md  build_amd.md  index.rst  mega_triton_kernel.md
docs/distributed/: build.md
docs/getting-started/: installation.rst
docs/getting-started/megakernel/: index.rst
docs/getting-started/tutorials/: 02-intra-node-allgather.rst  03-inter-node-allgather.rst  07-overlapping-allgather-gemm.rst  10-AMD-overlapping-gemm-reduce-scatter.rst  index.rst
docs/kernels/nvidia/: index.rst  low_latency_a2a_v2.rst
docs/layers/nvidia/: index.rst
docs/little_kernel/: dsl-reference.rst  getting-started.rst  index.rst  intrinsics.rst
lib/Conversion/: CMakeLists.txt
lib/Conversion/TritonDistributedToHIVM/: CMakeLists.txt
lib/Conversion/TritonDistributedToLLVM/: CMakeLists.txt  SIMTOpToLLVM.cpp
lib/Conversion/TritonDistributedToTritonGPU/: CMakeLists.txt
python/: build_helpers.py  pyproject.toml  setup.py
python/little_kernel/: README.md  __init__.py
python/little_kernel/atom/: scheduler.py
python/little_kernel/benchmark/: __init__.py  run_all.py  utils.py
python/little_kernel/codegen/: __init__.py  codegen_base.py  codegen_cuda.py  special_struct_codegen.py
python/little_kernel/core/: compile.py  expr.py  internal.py  ir_base.py  stmt.py  type_system.py
python/little_kernel/design/: flashcomm_barrier.py  flashcomm_combine.py  flashcomm_compute.py  flashcomm_dispatch.py  flashcomm_dispatch_chunk.py  flashcomm_ep_kernels.py  flashcomm_postprocess.py  launch_flashcomm_test.sh  sm90_bf16_gemm.py  test_flashcomm_compile_all.py  test_flashcomm_compute.py  test_flashcomm_multi_gpu.py  test_flashcomm_torchrun.py  test_ipc_minimal.py  test_runtime.py
python/little_kernel/language/: __init__.py  builtin_base.py  simple_builtin.py
python/little_kernel/runtime/: README.md  __init__.py  compiler.py  cuda_runtime.py  kernel.py  tma_descriptor.py
python/little_kernel/tests/: conftest.py
python/src/: ascend_passes.cc  ir.cc  passes.cc  triton_distributed.cc
python/triton_dist/: __init__.py  amd_utils.py  jit.py  nv_utils.py  profiler_utils.py  tma_utils.py  tune.py  utils.py
python/triton_dist/benchmark/: bench_allgather_gemm.py  bench_pp.py  bench_tp_attn.py  bench_tp_mlp.py
python/triton_dist/example/: deep_ep_example.py  ll_ag_example.py
python/triton_dist/kernels/: allreduce.py  common_ops.py
python/triton_dist/language/: __init__.py  core.py  simt_ops.py  smem_ops.py
python/triton_dist/models/: dense.py  qwen_moe.py  utils.py
python/triton_dist/test/: allgather_matmul.py  utils.py
python/triton_dist/tools/: compile_aot.py  gen_amd_libdevice_extra.py  monkey_inductor.py
scripts/: aot_kernels.txt  build_e2e_env.sh  build_metax.sh  build_mori_shmem.sh  build_nvshmem_from_src.sh  check_license.py  double_launch.sh  launch.sh  launch_amd.sh  launch_metax.sh  pull_metax_triton.sh  run_nvidia_tma_tests.sh  setenv.sh
shmem/mxshmem_bind/pymxshmem/: CMakeLists.txt  setup.py
shmem/mxshmem_bind/pymxshmem/example/: run.sh  run_ring_put.py
shmem/mxshmem_bind/pymxshmem/python/pymxshmem/: __init__.py
shmem/mxshmem_bind/pymxshmem/src/: flush_l2c.cu  pymxshmem.cc
shmem/nvshmem_bind/nvshmemi/: transfer_device.cu
shmem/rocshmem_bind/: build.sh  build_rocshmem.sh
shmem/rocshmem_bind/pyrocshmem/: setup.py
shmem/rocshmem_bind/runtime/: rocshmem_wrapper.cc  rocshmem_wrapper.h
shmem/rocshmem_bind/scripts/: build_rocshmem_device_bc.sh  build_rocshmem_wrapper.sh  build_rshm_ipc_single.sh
tutorials/: 01-distributed-notify-wait.py  02-intra-node-allgather.py  03-inter-node-allgather.py  03a-inter-node-allgather.py  04-deepseek-infer-all2all.py  05-intra-node-reduce-scatter.py  06-inter-node-reduce-scatter.py  07-overlapping-allgather-gemm.py  08-overlapping-gemm-reduce-scatter.py  09-AMD-overlapping-allgather-gemm.py  10-AMD-overlapping-gemm-reduce-scatter.py  11-ascend-allgather-gemm.py  12-ascend-gemm-reduce-scatter.py  13-ascend-gemm-allreduce-oneshot.py
tutorials/ascend/: 01-ascend-allgather-gemm.py  02-ascend-gemm-reduce-scatter.py  03-ascend-gemm-allreduce-oneshot.py
unittest/: test_triton_tuple_input.py
(+413 files in other folders)
